# MarsSim

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  README_EN.md  README_ZH.md  crater_gen.md  pyproject.toml
.github/workflows/: ci.yml
config/: path_config.yaml
rover_control/: CMakeLists.txt  package.xml
rover_control/config/: hunter_controllers.yaml  zhurong_rover_control.yaml  zhurong_rover_control_3.yaml
rover_control/launch/: hunter_control.launch  teleop_keyboard.launch  zhurong_control.launch  zhurong_control_3.launch  zhurong_systems.launch  zhurong_systems_3.launch
rover_control/scripts/: ackerman_3_wheels.py  ackerman_6_wheels.py  rover_mode_control.py
rover_control/src/: control_node.cpp
rover_descriptions/hunter_se_description/: package.xml
rover_descriptions/triwheel_rover_description/: CMakeLists.txt  model.config  model.sdf  package.xml
rover_descriptions/zhurong_description/: CMakeLists.txt  package.xml
rover_gazebo/: CMakeLists.txt  package.xml
rover_gazebo/launch/: hunter_main_real.launch  hunter_spawn.launch  hunter_start.launch  rover_spawn.launch  rover_start.launch  zhurong_experiment_world.launch  zhurong_main_experiment.launch  zhurong_main_real.launch  zhurong_main_simple.launch  zhurong_paper_world.launch  zhurong_real_world.launch  zhurong_simple_world.launch  zhurong_spawn.launch  zhurong_start.launch
rover_gazebo/rviz/: zhurong_simulation.rviz  zhurong_simulation_no_prefix.rviz
rover_gazebo/urdf/: hunter_description.xacro  hunter_gazebo.xacro  rover_gazebo.xacro  triwheel_rover.gazebo  zhurong_gazebo.xacro  zhurong_mars_rover.gazebo
rover_gazebo/worlds/: BigMars.world  MarsWorld.world  experiment.world  simple.world
rover_gazebo_plugins/: CMakeLists.txt  package.xml
rover_gazebo_plugins/config/: TerramechanicsPluginParam.yaml
rover_gazebo_plugins/include/: TerramechanicsPlugin.hh  TerramechanicsPlugin_new.hh
rover_gazebo_plugins/src/: PathRVIZ.cpp  TerramechanicsPlugin.cpp  TerramechanicsPlugin_new.cpp  tf_odom_pub.cpp
rover_msgs/: CMakeLists.txt  package.xml
rover_msgs/msg/: RoverControlMode.msg
world_plugins/: CMakeLists.txt  package.xml
world_plugins/config/: mars_terrain_params.yaml  rock_list.csv  terrain_data.csv
world_plugins/scripts/: CameraProcess.py  ConfigGEN.py  CraterGen.py  GazeboSimulate.py  ModelGEN.py  PPimage.py  RockDistCalc.py  TerrainGEN.py  WorldGEN.py  WorldGEN_exp.py  download_models.py  experiment_world_change_pipeline.py  gazebo_connection.py  gazebo_env.py  heightmap_change.py  image_saver.py  path_config_helper.py  plot_geometry.py  pre_start_saver.py  simulation_pipeline.py  utils.py  workspace_config.py  (+1 more)
(+74 files in other folders)
